Closed Bug 96199 Opened 23 years ago Closed 23 years ago

memory leak in prmwait.c

Categories

(NSPR :: NSPR, defect, P2)

4.1.2
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jeff, Assigned: wtc)

References

Details

(Keywords: memory-leak, perf)

Attachments

(1 file)

various static variables are not destroyed.

please add the following function to prmwait.c
and call from somewhere near the bottom of PR_Cleanup():


void _PR_CleanupMW(void)
{
	PR_DestroyLock(mw_lock);
	mw_lock = NULL;
	PR_Free(mw_state);
	mw_state = NULL;
}
Whoohoo patches galore.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: mlk, patch, perf, review
Blocks: 92580
No longer blocks: 92580
Patch checked into the tip of NSPR.
Status: NEW → RESOLVED
Closed: 23 years ago
OS: Windows 2000 → All
Priority: -- → P2
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → 4.2
Blocks: 129902
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: