Bugzilla bug 96199: added _PR_CleanupMW() to clean up the static data created by prmwait.c.  The patch is contributed by Jeff Hostetler <jeff@NerdOne.com>. Modified files: primpl.h prmwait.c prinit.c ptthread.c